k8s-tutorial/configuration-file/mongo/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-experess
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
#  type: LoadBalancer # accepts external requests by assigning external IP address
  ports:
    - protocol: TCP
      port: 8081 # exposed port
      targetPort: 8081 # should match to the Pod's containerPort
#      nodePort: 30000 # open to external requests. Must be between 30_000-32_767
# minikube service mongo-express-service
