k8s-tutorial/configuration-file/mongo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  rules: # routing roules
    # map domain name to Node's IP address
    # ged node IP > minikube ip
    # sudo nano /etc/hosts
    # add ${nodeIp} my-minikube.com
    - host: my-minikube.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
